tests/data/negative/test_data_glob_not_def_init.orb
data Foo;

Foo f;

fnc main() {
}